--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "framer-motion": "^10.12.12",
     "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.3.0",
     "next": "13.3.4",
